[package]
name = "aokege"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
zip = "0.6"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.18.0"
openssl = { version = "0.10", features = ["vendored"] }
